2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py:
	Use portable 'if' syntax

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/sourcefactories.py:
	Fixes to display factories when a new project is loaded.
	Re-factored code a bit to avoid duplicates.

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/pitivi.py:
	The uri is a keyword argument to Project()
	* pitivi/project.py:
	Serializable sub-classes need to have keyword-only arguments.
	Activate proper save
	Small code re-organization
	* pitivi/projectsaver.py:
	Add debugging
	whitespace-fixes
	* pitivi/ui/mainwindow.py:
	methods renaming
	added debugging
	whitespace-fixes

2007-11-18  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py:
	* pitivi/serializable.py:
	* pitivi/settings.py:
	* pitivi/sourcelist.py:
	Classes implementing Serializable need to have keyword-only arguments
	Store some more info for factories
	Misc fixes
	* pitivi/timeline/composition.py:
	defaultSource should be a TimelineFileSource and not a pure gnlobject
	De-serialize all contents before adding them to the composition.
	* pitivi/timeline/objects.py:
	change naming of serializable attributes.
	* pitivi/timeline/source.py:
	Small fixes
	* pitivi/timeline/timeline.py:
	Switch to using TimelineBlankSource for default sources
	Small fixes
	* pitivi/ui/timelineobjects.py:
	small fixes
	* tests/common.py:
	* tests/test_serializable.py:
	Classes implementing Serializable need to have keyword-only arguments

2007-11-12  Edward Hervey  <bilboed@bilboed.com>

	Patch by: Tommy <yobbobandana at yahoo dot co dot nz>

	* pitivi/ui/sourcefactories.py:
	unquote urls from drag and drop, this should fix some issues when
	DnD'ing files from Nautilus for ex.

2007-11-11  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/settings.py:
	Add some debugging.
	Don't specify audio depth in settings caps, this causes too many issues
	with compatible encoder caps.
	Fixes #487455
